force-app/main/default/objects/Integration_Error__c/Integration_Error__c.object-meta.xml
<CustomObject>
    <description>Integration Error</description>
    <label>Integration Error</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>