force-app/main/default/objects/Integration_Error__c/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <description>Mule API version</description>
    <encryptionScheme>None</encryptionScheme>
    <label>API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>