force-app/main/default/objects/Integration_Error__c/fields/Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Correlation_ID__c</fullName>
    <description>End-to-end tracking ID passed across systems.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>