force-app/main/default/objects/Integration_Error__c/fields/Error_ID__c.field-meta.xml
<CustomField>
    <fullName>Error_ID__c</fullName>
    <description>Unique Salesforce-generated identifier. Format: ERR-{00000}</description>
    <displayFormat>ERR-{00000}</displayFormat>
    <label>Error ID</label>
    <type>AutoNumber</type>
</CustomField>