force-app/main/default/objects/Integration_Error__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Short description of the error.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>