force-app/main/default/objects/Integration_Error__c/fields/Error_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Error_Timestamp__c</fullName>
    <description>Exact time when the error occurred.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Timestamp</label>
    <type>DateTime</type>
</CustomField>