force-app/main/default/objects/Integration_Error__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <description>Sent from Mule as Free Text 
Sample Values: Data Error, System Error etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ErrorType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>