force-app/main/default/objects/Integration_Error__c/fields/External_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_ID__c</fullName>
    <description>Reference ID for cross-system matching (e.g., ASPN ID).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>External Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>