force-app/main/default/objects/Integration_Error__c/fields/Mule_App_Name__c.field-meta.xml
<CustomField>
    <fullName>Mule_App_Name__c</fullName>
    <description>MuleSoft application that generated the error.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mule App Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>