force-app/main/default/objects/Integration_Error__c/fields/Payload_Data__c.field-meta.xml
<CustomField>
    <fullName>Payload_Data__c</fullName>
    <description>Request payload that caused the failure.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payload Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>