force-app/main/default/objects/Integration_Error__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Details of the fix or remediation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>