force-app/main/default/objects/Integration_Error__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who resolved the issue.</description>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integration_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>