force-app/main/default/objects/Integration_Error__c/fields/Resolved_Flag__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the issue is fixed.</description>
    <label>Resolved Flag</label>
    <type>Checkbox</type>
</CustomField>