force-app/main/default/objects/Integration_Error__c/fields/Response_Data__c.field-meta.xml
<CustomField>
    <fullName>Response_Data__c</fullName>
    <description>Error response from target system.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>